# raspindi

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PARTS.md  README.md  Third Party License  build.sh  easy-setup.sh  install.sh  uninstall.sh
.github/workflows/: build-arm32.yml  build-arm64.yml  build.yml  stale.yml
etc/: RasPi-HDMI.start.service  RasPi-NDI-HDMI-button.start.service  RasPi-NDI.start.service  control-button.py  raspindi.conf.default
etc/old/: raspindi.conf.default
include/: Processing.NDI.DynamicLoad.h  Processing.NDI.Embedded.h  Processing.NDI.FrameSync.h  Processing.NDI.structs.h
include/core/: buffer_sync.hpp  completed_request.hpp  dma_heaps.hpp  frame_info.hpp  logging.hpp  metadata.hpp  options.hpp  post_processor.hpp  rpicam_app.hpp  rpicam_encoder.hpp  still_options.hpp  stream_info.hpp  version.hpp  video_options.hpp
include/encoder/: encoder.hpp  h264_encoder.hpp  libav_encoder.hpp  mjpeg_encoder.hpp  null_encoder.hpp
include/image/: image.hpp
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/output/: circular_output.hpp  file_output.hpp  net_output.hpp  output.hpp
include/post_processing_stages/: histogram.hpp  object_detect.hpp  post_processing_stage.hpp  pwl.hpp  segmentation.hpp  tf_stage.hpp
include/preview/: preview.hpp
lib/ndi/: libndi.so.4.5.2  libndi.so.4.6.2  libndi.so.5
lib/opencv/: libopencv_aruco.so.4.4  libopencv_aruco.so.4.4.0  libopencv_bgsegm.so.4.4  libopencv_bgsegm.so.4.4.0  libopencv_bioinspired.so.4.4  libopencv_bioinspired.so.4.4.0  libopencv_calib3d.so.4.4  libopencv_calib3d.so.4.4.0  libopencv_ccalib.so.4.4  libopencv_ccalib.so.4.4.0  libopencv_core.so.4.4  libopencv_datasets.so.4.4  libopencv_datasets.so.4.4.0  libopencv_dnn.so.4.4  libopencv_dnn_objdetect.so.4.4  libopencv_dnn_objdetect.so.4.4.0  libopencv_dnn_superres.so.4.4  libopencv_dnn_superres.so.4.4.0  libopencv_dpm.so.4.4  libopencv_dpm.so.4.4.0  libopencv_face.so.4.4  libopencv_face.so.4.4.0  libopencv_features2d.so.4.4  (+71 more)
src/: CMakeLists.txt  event_loop.cpp  event_loop.h  fraction.cpp  main.cpp  ndi_output.cpp  ndi_output.hpp
src/old/: main.cpp
(+2 files in other folders)
